# UCSD-IARC-Quadcopter

./: README.md
Website/: main.html
hardware/: Laser Model.dwg
hardware/Safety Switch/: Safety Mod.brd  Safety Mod.cmp  Safety Mod.gpi  Safety Mod.plc  Safety Mod.sol  Safety Mod.stc  Safety Mod.sts
hardware/Safety Switch/Downloaded EDA Files/C1/: Eagle\Eagle\Eagle.xml  Eagle\Eagle\Eagle.xml_Library.scr  Eagle\Eagle\readme.txt
hardware/Safety Switch/SafetySwitch/: SafetySwitchPCB.brd  SafetySwitchParts.l#1  SafetySwitchParts.l#2  SafetySwitchParts.l#3  SafetySwitchSchematic.sch  eagle.epf
perception/: README.md
perception/relational_positioning/: Makefile  README.md  helpers.cpp  helpers.hpp  main.cpp  rel_pos  roomba.cpp  roomba.hpp  settings.hpp  tracker.cpp  tracker.hpp
perception/track_ros/: CMakeLists.txt  README.md  copy_to_catkin_src  make_in_catkin  package.xml
perception/track_ros/include/perception_interface/: roomba.hpp  settings.hpp  tracker.hpp
perception/track_ros/src/: helpers.cpp  observe.cpp  roomba.cpp  tracker.cpp
perception/track_standalone/: Makefile  helpers.cpp  kf_tracker_sandbox.ipynb  main.cpp  rel_pos  roomba.cpp  tracker.hpp
self-estimation/: selfLoc.m
self-estimation/GridDection_George/: VidoPlayback2.m  videoPlayback.m
self-estimation/GridDection_George_2/: GridDection.m  VideoInCustomGUIExample.m  VidoPlayback2.m  videoPlayback.m
self-estimation/grid-detection/: grid2mat.m  im_thresh.m
simulation/: install_sim.bash  install_simulation_skeleton.bash  simulation_install_v1_0_0.sh
simulation/Run_Simulation/: .bash_profile  README.md  run_sim_terminal1.sh  run_sim_terminal2.sh  run_sim_terminal3.sh
simulation/quad_simulator/: README.md
simulation/quad_simulator/launch/: iarc.launch  spawn_green.launch  spawn_red.launch  ucsd_iarc.launch
simulation/quad_simulator/sdf/: green_roomba.sdf  model-1_4.sdf  red_roomba.sdf
simulation/quad_simulator/src/: groundbot.cpp
simulation/quad_simulator/urdf/: quadrotor_downward_cam.urdf.xacro
(+27 files in other folders)
