<?xml version="1.0"?>
<package>
  <name>perception_interface</name>
  <version>0.0.0</version>
  <description>Interface with the perception suite using OpenCV </description>

  <maintainer email="j6quach@gmail.com">Jason Quach</maintainer>

  <license>BSD</license>

  <author email="j6quach@gmail.com">Jason Quach</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
